# snowflake_ai_workspace

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  SPECIFICATION.md  SPECIFICATION_snowflake.md  gitintegration.sql  pipeline.py  pyproject.toml  requirements.txt  run_equity.ps1  run_etf_eda.ps1  run_securities.ps1  snowflake.yml
.claude/: launch.json  settings.local.json
ETF_DB/: add_edgar_columns.sql  analyst2_semantic_model.yaml  analyze_etf.py  create_etf_data.sql  create_securities_table.sql  create_sf_cortex_analyst.sql  create_user.sql  equity_dashboard.py  etf_eda.ipynb  etf_eda_app.py  generate_spec_pdf.py  sec_edgar_enrich_load.py  sec_edgar_enrich_test.py  sec_edgar_test.py  securities_dashboard.py  user_setup.sql
config/: settings.py
deploy/: create_deployer.sh  deploy.ps1  deploy_aws.sh  deploy_function_tickers.ps1  deploy_hardened.ps1  setup_rbac.sh
deploy/iam_policies/: execution_role_policy.json  scheduler_role_policy.json  stepfunctions_role_policy.json  (+1 more)
docs/: aws_iam_setup.md  azure_ad_setup.md  validate_azure.ps1  validate_azure.sh  validate_azure_hardened.ps1  validate_azure_hardened.sh
notebooks/: sec_edgar_raw_test.ipynb
scripts/: validate_azure_permissions.py
single-agent-guide/: AGENT_PROMPT.md  COMMIT_CHECKLIST.md  README.md  SESSION_GUIDE.md  TODOS.md
workflows/: adf_linked_services.json  adf_linked_services_function_tickers.json  adf_pipeline.json  adf_pipeline_function_tickers.json  adf_trigger.json  adf_trigger_monthly.json  eventbridge_scheduler.json  stepfunctions_state_machine.json
(+45 files in other folders)
